--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,6 @@ EMAIL_PASS=YOUR_EMAIL_PASSWORD
 
 # Kakao OAuth
 KAKAO_REST_API_KEY=YOUR_KAKAO_REST_API_KEY
+KAKAO_REDIRECT_URI=http://localhost:8080/login/auth/kakao/callback
 
 FRONTEND_URL=http://localhost:3000
